BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_IsRedditi__c.field-meta.xml
<CustomField>
    <fullName>CRM_IsRedditi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Redditi</label>
    <type>Checkbox</type>
</CustomField>