BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_IsRedditiDaLavoro__c.field-meta.xml
<CustomField>
    <fullName>CRM_IsRedditiDaLavoro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Redditi da Lavoro</label>
    <type>Checkbox</type>
</CustomField>