BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_IsRedditiImmobiliari__c.field-meta.xml
<CustomField>
    <fullName>CRM_IsRedditiImmobiliari__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Redditi Immobiliari</label>
    <type>Checkbox</type>
</CustomField>