BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_Join_Meeting__c.field-meta.xml
<CustomField>
    <fullName>CRM_Join_Meeting__c</fullName>
    <label>Incontro Congiunto</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direzione Generale</fullName>
            </value>
            <value>
                <fullName>Responsabile Territoriale Corporate</fullName>
            </value>
            <value>
                <fullName>Responsabile Territoriale Retail</fullName>
            </value>
            <value>
                <fullName>Specialista Estero GTB</fullName>
            </value>
            <value>
                <fullName>Assistente Finanziamenti Corporate</fullName>
            </value>
            <value>
                <fullName>Renting</fullName>
            </value>
            <value>
                <fullName>Factoring</fullName>
            </value>
            <value>
                <fullName>Leasing</fullName>
            </value>
            <value>
                <fullName>Finanza imprese</fullName>
            </value>
            <value>
                <fullName>Consulente Assicurativo</fullName>
            </value>
            <value>
                <fullName>Investment banking</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Welfare</fullName>
            </value>
            <value>
                <fullName>Assicurazione crediti</fullName>
            </value>
            <value>
                <fullName>Referente Small Business Area</fullName>
            </value>
            <value>
                <fullName>Direttore Regionale</fullName>
            </value>
            <value>
                <fullName>Responsabile Imprese Retail di Area</fullName>
            </value>
            <value>
                <fullName>Specialista Imprese Retail</fullName>
            </value>
            <value>
                <fullName>Sviluppatore Imprese Retail</fullName>
            </value>
            <value>
                <fullName>Sviluppatore Corporate</fullName>
            </value>
            <value>
                <fullName>Sales Agri</fullName>
            </value>
            <value>
                <fullName>Altro</fullName>
            </value>
            <value>
                <fullName>Agente assicurativo</fullName>
                <isActive>false</isActive>
                <label>Agente assicurativo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>