BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDate_BankCredit__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDate_BankCredit__c</fullName>
    <description>Data e Ora ultima modifica per Affidamenti cassa</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Affidamenti cassa</label>
    <type>DateTime</type>
</CustomField>