BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDate_CustomerDevelopment__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDate_CustomerDevelopment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Sviluppo del Cliente</label>
    <type>DateTime</type>
</CustomField>