BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDate_OTCRatesCoverage__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDate_OTCRatesCoverage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Copertura OTC Tassi</label>
    <type>DateTime</type>
</CustomField>