BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDate_Other__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDate_Other__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Altro</label>
    <type>DateTime</type>
</CustomField>