BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDate_POS__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDate_POS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - POS</label>
    <type>DateTime</type>
</CustomField>