BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDate_RevPay__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDate_RevPay__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Incassi e pag. It/Est</label>
    <type>DateTime</type>
</CustomField>