BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateAcquistoPartAsset__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateAcquistoPartAsset__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Acq. partec/asset real</label>
    <type>DateTime</type>
</CustomField>