BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateAltroInvesAlternat__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateAltroInvesAlternat__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Altro Invest. Alter.</label>
    <type>DateTime</type>
</CustomField>