BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateAnalisiOttimizPartec__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateAnalisiOttimizPartec__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Analisi Ottimiz. Part.</label>
    <type>DateTime</type>
</CustomField>