BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateAnalisiPatrimImmobil__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateAnalisiPatrimImmobil__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Analisi patrim. immob.</label>
    <type>DateTime</type>
</CustomField>