BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateAnalisiPatrimTerzi__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateAnalisiPatrimTerzi__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Analisi patrim. Terzi</label>
    <type>DateTime</type>
</CustomField>