BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateAnalisiSuccessoria__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateAnalisiSuccessoria__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Analisi successoria</label>
    <type>DateTime</type>
</CustomField>