BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateArtAdvisory__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateArtAdvisory__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Art Advisory</label>
    <type>DateTime</type>
</CustomField>