BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateArte__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateArte__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Arte</label>
    <type>DateTime</type>
</CustomField>