BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateAssAuto__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateAssAuto__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Assicurazione auto</label>
    <type>DateTime</type>
</CustomField>