BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateAssetProtection__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateAssetProtection__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Asset Protection</label>
    <type>DateTime</type>
</CustomField>