BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateAssFamiglia__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateAssFamiglia__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Assicurazione Famiglia</label>
    <type>DateTime</type>
</CustomField>