BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateAssSalute__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateAssSalute__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Assicurazione salute</label>
    <type>DateTime</type>
</CustomField>