BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateAttivitaFilantropica__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateAttivitaFilantropica__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Attività filantropica</label>
    <type>DateTime</type>
</CustomField>