BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateCambioResidenzaFisc__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateCambioResidenzaFisc__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Cambio residenza fisc.</label>
    <type>DateTime</type>
</CustomField>