BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateCartolarizzazioni__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateCartolarizzazioni__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Cartolarizzazioni</label>
    <type>DateTime</type>
</CustomField>