BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateCertificate__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateCertificate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Certificate</label>
    <type>DateTime</type>
</CustomField>