BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateCessioneCredito__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateCessioneCredito__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Cessione Credito</label>
    <type>DateTime</type>
</CustomField>