BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateCommodity__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateCommodity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Commodity</label>
    <type>DateTime</type>
</CustomField>