BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateConsulAnalitProtPian__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateConsulAnalitProtPian__c</fullName>
    <description>Ultima modifica - Consulenza analitica protezione e piafinicazione patrimonial</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Consul. analit. protez</label>
    <type>DateTime</type>
</CustomField>