BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateConsulenzaPatrim__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateConsulenzaPatrim__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Consulenza Patrim.</label>
    <type>DateTime</type>
</CustomField>