BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateConsulEvolutaStd__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateConsulEvolutaStd__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Consulenza Evoluta Std</label>
    <type>DateTime</type>
</CustomField>