BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateConsulFinanzAdv__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateConsulFinanzAdv__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Consul. Finanziaria Ad</label>
    <type>DateTime</type>
</CustomField>