BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateCriptovalute__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateCriptovalute__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Criptovalute</label>
    <type>DateTime</type>
</CustomField>