BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateCustomerAcquisition__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateCustomerAcquisition__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Acquisit. Nucleo Eredi</label>
    <type>DateTime</type>
</CustomField>