BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateDebitCards__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateDebitCards__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Carte di Debito</label>
    <type>DateTime</type>
</CustomField>