BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateFiduciaryMandate__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateFiduciaryMandate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Mandati fiduciari</label>
    <type>DateTime</type>
</CustomField>