BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateFinancialVarious__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateFinancialVarious__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Varie - Finanziamenti</label>
    <type>DateTime</type>
</CustomField>