BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateFirmaElettronicaCert__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateFirmaElettronicaCert__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Firma elett. cert.</label>
    <type>DateTime</type>
</CustomField>