BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateFondiESG__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateFondiESG__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Fondi ESG</label>
    <type>DateTime</type>
</CustomField>