BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateFondiInvestimentoCed__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateFondiInvestimentoCed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Fondi Investimento Ced</label>
    <type>DateTime</type>
</CustomField>