BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateFundsExpiringProduct__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateFundsExpiringProduct__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Finanz - Prod. in scad</label>
    <type>DateTime</type>
</CustomField>