BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateHedgeFund__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateHedgeFund__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Hedge Fund</label>
    <type>DateTime</type>
</CustomField>