BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateIdeeInvestimento__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateIdeeInvestimento__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Idee d&apos;investimento</label>
    <type>DateTime</type>
</CustomField>