BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateInfrastrutture__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateInfrastrutture__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Infrastrutture</label>
    <type>DateTime</type>
</CustomField>