BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateInteresseClubDeal__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateInteresseClubDeal__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Club Deal (anche SPAC)</label>
    <type>DateTime</type>
</CustomField>