BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateInteresseIPO__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateInteresseIPO__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Interesse IPO</label>
    <type>DateTime</type>
</CustomField>