BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateInvestimentiViaToken__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateInvestimentiViaToken__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Investimenti via token</label>
    <type>DateTime</type>
</CustomField>