BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateLeasingNautico__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateLeasingNautico__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Leasing Nautico</label>
    <type>DateTime</type>
</CustomField>