BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateLombard__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateLombard__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Lombard</label>
    <type>DateTime</type>
</CustomField>