BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateNFT__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateNFT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Non fungible Token</label>
    <type>DateTime</type>
</CustomField>