BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateNPL__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateNPL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - NPL</label>
    <type>DateTime</type>
</CustomField>