BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateOffSiteOffer__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateOffSiteOffer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Offerta fuori sede</label>
    <type>DateTime</type>
</CustomField>