BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateOnboardingDevelop__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateOnboardingDevelop__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Onboarding eo sviluppo</label>
    <type>DateTime</type>
</CustomField>