BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateOnlineTrading__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateOnlineTrading__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - TOL</label>
    <type>DateTime</type>
</CustomField>