BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateOperativPtf__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateOperativPtf__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - operativ. su ptf</label>
    <type>DateTime</type>
</CustomField>