BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateOpStraordinarie__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateOpStraordinarie__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Op. straordinarie</label>
    <type>DateTime</type>
</CustomField>