BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateOrgPatrimonioPassGen__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateOrgPatrimonioPassGen__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Organizzazione Patrim.</label>
    <type>DateTime</type>
</CustomField>