BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateOtherFunds__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateOtherFunds__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Altro - Finanziamenti</label>
    <type>DateTime</type>
</CustomField>