BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateOtherWMServices__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateOtherWMServices__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Altri Servizi di WM</label>
    <type>DateTime</type>
</CustomField>