BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateOttimizGestPartAzion__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateOttimizGestPartAzion__c</fullName>
    <description>Ottimizzazione gestione partecipazioni azionarie</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Otti. gest. part. az.</label>
    <type>DateTime</type>
</CustomField>