BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDatePerfPTFAnalysis__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDatePerfPTFAnalysis__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Analisi perf. PTF</label>
    <type>DateTime</type>
</CustomField>