BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDatePrivateDebt__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDatePrivateDebt__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Private Debt</label>
    <type>DateTime</type>
</CustomField>