BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDatePrivateEquity__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDatePrivateEquity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Private Equity</label>
    <type>DateTime</type>
</CustomField>