BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateProductsServicesInfo__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateProductsServicesInfo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Info su prod. e serv.</label>
    <type>DateTime</type>
</CustomField>