BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateProposteInvestimento__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateProposteInvestimento__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Proposte Investimento</label>
    <type>DateTime</type>
</CustomField>