BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateRealEstateAdvEstero__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateRealEstateAdvEstero__c</fullName>
    <description>Real estate advisory estero</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Real estate ad. estero</label>
    <type>DateTime</type>
</CustomField>