BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateRealEstateConsulting__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateRealEstateConsulting__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Consulenza Immobiliare</label>
    <type>DateTime</type>
</CustomField>