BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateRealEstateDiretto__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateRealEstateDiretto__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Real Estate diretto</label>
    <type>DateTime</type>
</CustomField>