BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateServiziFiduciari__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateServiziFiduciari__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Servizi fiduciari</label>
    <type>DateTime</type>
</CustomField>