BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateSmartWeb__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateSmartWeb__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Smart Web</label>
    <type>DateTime</type>
</CustomField>