BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateTagAssicurativo__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateTagAssicurativo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Tagliando assicurativo</label>
    <type>DateTime</type>
</CustomField>