BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateTaxLegalAdv__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateTaxLegalAdv__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Tax &amp; legal adv Patrim</label>
    <type>DateTime</type>
</CustomField>