BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateTrust__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateTrust__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Trust</label>
    <type>DateTime</type>
</CustomField>