BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateVentureCapital__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateVentureCapital__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Venture Capital</label>
    <type>DateTime</type>
</CustomField>