BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterview__c/fields/CRM_LastModifiedDateVerificaRetention__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateVerificaRetention__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Verifica retention</label>
    <type>DateTime</type>
</CustomField>